added flex to main box

--- a/frontend/src/assets/styles/Main.module.css
+++ b/frontend/src/assets/styles/Main.module.css
@@ -3,3 +3,11 @@
   justify-content: center;
   margin: 1em;
 }
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
